updating appointment